bar spacing fix

--- a/public/css/bustime-info.css
+++ b/public/css/bustime-info.css
@@ -3130,7 +3130,7 @@ The only content we actually need is whatever is required to support the about p
   background-color: rgba(255, 255, 255, 0.4);
   margin-left: auto;
   margin-right: auto;
-  margin: 0.75rem 0;
+  margin: 0 0 0.75rem 0;
 }
 
 #footer .footer-classic-link {
